Fix: Correct color change of download CV button on smaller screen resolutions

--- a/src/Modules/Header.module.css
+++ b/src/Modules/Header.module.css
@@ -66,7 +66,7 @@ header {
   border-radius: 80px;
   cursor: pointer;
   border: none;
-  transition: transform 0.3s ease, background-color 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .cvContactButton:hover {
@@ -86,11 +86,6 @@ header {
 
 .cvContactButton {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.cvContactButtonLeft:hover,
-.cvContactButtonRight:hover {
-  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15);
 }
 
 .profilePic {
